...
                    title: "Directions",
                  }}
                />
                <Tabs.Screen
                  name="indoor"
                  options={{
                    title: "Indoor",
                  }}
                />
                <Tabs.Screen
                  name="schedule"
                  options={{
                    title: "Schedule",
...
