appId: com.soen390.campusguide
---
- launchApp
- extendedWaitUntil:
    visible: "SGW Campus"
    timeout: 1800000

- assertVisible: "SGW Campus"

- tapOn: "Directions"
- waitForAnimationToEnd

- assertVisible: "Start location"
- tapOn: "Start location"
- inputText: "John"
- hideKeyboard
- waitForAnimationToEnd

- tapOn: "John Molson Building"
- waitForAnimationToEnd

- assertVisible: "Destination"
- tapOn: "Destination"
- inputText: "Centra"
- hideKeyboard
- waitForAnimationToEnd

- tapOn: "Central Building"
- waitForAnimationToEnd

- assertVisible: "John Molson Building"
- assertVisible: "Central Building"

- tapOn:
   point: "50%,45%"
- waitForAnimationToEnd

- tapOn: "Shuttle"
- waitForAnimationToEnd

- tapOn: "Full Schedule"
- waitForAnimationToEnd

- assertVisible: "Shuttle Bus Schedule"
- assertVisible: "Monday — Thursday"

- swipe:
    direction: UP
    duration: 500

- waitForAnimationToEnd

- assertVisible: "LOY DEPARTURES"
- assertVisible: "S.G.W DEPARTURES"

- assertVisible: "* Last bus / Dernier départ"

- tapOn: "Friday"
- waitForAnimationToEnd

- tapOn:
    id: "close-shuttle-modal"
- waitForAnimationToEnd

- assertVisible: "Get Directions"

- assertVisible:
    text: ".*mins.*km.*" 

- tapOn: "Map"
- waitForAnimationToEnd

- tapOn: "Loyola Campus"
- waitForAnimationToEnd

- doubleTapOn:
    point: "50%,70%"
- waitForAnimationToEnd

- stopApp