appId: com.soen390.campusguide
---
- launchApp
- extendedWaitUntil:
    visible: "SGW Campus"
    timeout: 1800000

- assertVisible: "SGW Campus"

- tapOn:
    point: "90%,93%"
- waitForAnimationToEnd

- setLocation:
    latitude: 45.4584
    longitude: -73.6402

- tapOn:
    id: "poi-toggle-button"
- waitForAnimationToEnd

- tapOn:
    point: "30%,47%"
- waitForAnimationToEnd

- assertVisible: "CAFE"

- tapOn: "Get Directions"
- waitForAnimationToEnd

- assertVisible: "Start location"
- tapOn: "Start location"
- inputText: "Henry"
- hideKeyboard
- waitForAnimationToEnd

- tapOn: "Henry F. Hall Building"
- waitForAnimationToEnd

- tapOn:
    point: "50%,45%"
- waitForAnimationToEnd

- tapOn: "Walk"
- waitForAnimationToEnd
- assertVisible:
    text: ".*mins.*km.*" 
    
- tapOn: "Car"
- waitForAnimationToEnd
- assertVisible:
    text: ".*mins.*km.*" 

- tapOn: "Transit"
- waitForAnimationToEnd
- assertVisible:
    text: ".*mins.*km.*" 

- stopApp