appId: com.soen390.campusguide
---
- launchApp
- extendedWaitUntil:
    visible: "SGW Campus"
    timeout: 1800000

- assertVisible: "SGW Campus"

- tapOn:
    point: "90%,93%"
- waitForAnimationToEnd

- tapOn: "Indoor"
- waitForAnimationToEnd

- tapOn: "Indoor POIs"
- waitForAnimationToEnd

- assertVisible: "OFF"

- assertVisible: "Start room (e.g., H-820)"
- tapOn: "Start room (e.g., H-820)"
- inputText: "H-820"
- pressKey: enter
- waitForAnimationToEnd

- assertVisible: "H820"
- assertVisible: "8"

- tapOn: "Destination room (e.g., H-820)"
- inputText: "MBS2.210"
- pressKey: enter
- waitForAnimationToEnd


- tapOn: "Get Step-by-Step Directions"
- waitForAnimationToEnd

- doubleTapOn:
    point: "50%,75%"

- doubleTapOn:
    point: "50%,60%"

- assertVisible: ".*Step.*of.*"
- assertVisible: "Next.*"
- assertVisible: ".*Previous"
- assertVisible: "Exit Story Mode"

- tapOn: "Next.*"
- waitForAnimationToEnd

- assertVisible: ".*Walking.*mins.*"

- tapOn: "Next.*"

- doubleTapOn:
    point: "50%,70%"

- doubleTapOn:
    point: "50%,70%"

- assertVisible: "John Molson Building Entrance.*"

- tapOn: ".*Previous"
- waitForAnimationToEnd

- tapOn: ".*Previous"
- waitForAnimationToEnd

- tapOn: "Exit Story Mode"
- waitForAnimationToEnd

- stopApp