appId: com.soen390.campusguide
---
- launchApp
- extendedWaitUntil:
    visible: "SGW Campus"
    timeout: 1800000

- assertVisible: "SGW Campus"

- tapOn: "Schedule"
- waitForAnimationToEnd

- tapOn: ".*NEXT CLASS"
- waitForAnimationToEnd

- tapOn: "Use My Location"
- waitForAnimationToEnd

- tapOn: "Get Step-by-Step Directions"
- waitForAnimationToEnd

- assertVisible: ".*Walking.*mins.*"

- tapOn: "Next.*"
- waitForAnimationToEnd

- assertVisible: "John Molson Building Entrance.*"

- tapOn: ".*Previous"
- waitForAnimationToEnd

- stopApp