appId: com.soen390.campusguide
---
- launchApp
- extendedWaitUntil:
    visible: "SGW Campus"
    timeout: 1800000

- assertVisible: "SGW Campus"

- tapOn:
    point: "90%,93%"
- waitForAnimationToEnd

- tapOn:
    id: "locate"
- waitForAnimationToEnd

- assertVisible: 
    text: ".*You don't appear to be on campus.*"

- stopApp