appId: com.soen390.campusguide
---
- launchApp
- extendedWaitUntil:
    visible: "SGW Campus"
    timeout: 1800000

- assertVisible: "SGW Campus"

- tapOn:
    point: "90%,93%"
- waitForAnimationToEnd

- tapOn: "Directions"

- waitForAnimationToEnd
- assertVisible: "Get Directions"
- assertVisible: "Walk"
- assertVisible: "Car"

- tapOn: "Map"

- waitForAnimationToEnd

- assertVisible: "SGW Campus"

- tapOn: "Loyola Campus"

- waitForAnimationToEnd
- assertVisible: "Loyola Campus"

- tapOn: "SGW Campus"

- waitForAnimationToEnd
- assertVisible: "SGW Campus"

- stopApp