appId: com.soen390.campusguide
---
- launchApp
- extendedWaitUntil:
    visible: "SGW Campus"
    timeout: 1800000

- assertVisible: "SGW Campus"

- tapOn:
    point: "90%,93%"
- waitForAnimationToEnd

- tapOn: "Loyola Campus"
- waitForAnimationToEnd

- setLocation:
    latitude: 45.4584
    longitude: -73.6402

- tapOn:
    point: "90%,93%"
- waitForAnimationToEnd

- tapOn:
    id: "locate"
- waitForAnimationToEnd

- assertVisible: 
    text: ".*You are near.*"

- stopApp